# VulkanEx

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AndroidMain.cpp  CMakeLists.txt  VulkanMain.cpp  VulkanMain.hpp  native-lib.cpp
app/src/main/java/com/ctyeung/vulkanex/: MainActivity.kt  MeshBound.kt  OffDecoder.kt  OffDecoderActivity.kt  OffFace.kt  TriangleActivity.kt
app/src/main/res/layout/: activity_main.xml  activity_off_decoder.xml  activity_triangle.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/shaders/: tri.frag
assets/: cube_plane.off  right_triangle.off  star_trek_symbol.off
gradle/wrapper/: gradle-wrapper.properties
